@@ -13,8 +13,11 @@ ddetect (1.15) UNRELEASED; urgency=low
     - Add a few missing 2.6 ethernet drivers to devnames.txt.
   * Colin Watson
     - Register apm_emu on systems with via-pmu mac-io devices.
+  * Frans Pop
+    - Schedule acpi packages for installation if system has acpi support.
+      Works only for 2.6 kernels. Closes: #300545
 
- -- Joey Hess <joeyh@debian.org>  Fri, 11 Mar 2005 14:27:07 -0500
+ -- Frans Pop <aragorn@tiscali.nl>  Sat, 30 Apr 2005 23:50:07 +0200
 
 ddetect (1.14) unstable; urgency=low
 
